kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: to-do-app
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: to-do-app
  template:
    metadata:
      labels:
        app: to-do-app
    spec:
      containers:
        - name: to-do-app
          image: 418295696257.dkr.ecr.ap-south-1.amazonaws.com/todoapp:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /etc/todos/
              name: app-storage
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-pvc
